# openmp_examples

./: .gitignore  .replit  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ej_pfor1.cpp  ej_pfor2.cpp  ej_pfor3_single_master.cpp  ej_pfor4_nowait.cpp  ej_psections.cpp  ej_ptask.cpp  function_loaded.hpp  main.cpp  ompe  p2for.hpp  p3numerical_integration.hpp  p4.1nested.hpp  p4for_single_master.hpp  p5for_nowait.hpp  p8sin_integration.hpp  p9parent_child.hpp  pfor1.hpp  pfor2.hpp  pfor3_single_master.hpp  pfor4_nowait.hpp  phello_omp.hpp  pnumerical_integration.hpp  psections.hpp  ptask.hpp  register_thread.hpp
apps/: CMakeLists.txt  ompe.cpp
examples/: p0hola_openmp.hpp  p1for.hpp  p4.1nested.hpp  p4.2nested.hpp  p4for_single_master.hpp  p6sections.hpp  p7task.hpp  pproducer_consumer.hpp
include/ompe/: omp_log.hpp  register_thread.hpp  table.hpp
